--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment111111"/>
+    <com.amap.api.maps2d.MapView
+        android:id="@+id/main_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
