--- a/app/src/main/res/layout/item_dynamic_list.xml
+++ b/app/src/main/res/layout/item_dynamic_list.xml
@@ -7,6 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="2dip"
         android:background="@android:color/white"
         android:padding="5dip"
         android:orientation="vertical">
