--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00897b</color>
+    <color name="colorPrimaryDark">#005b4f</color>
+    <color name="colorPrimaryLight">#4ebaaa</color>
+    <color name="colorSecondary">#ff6f00</color>
+    <color name="colorSecondaryDark">#c43e00</color>
+    <color name="colorSecondaryLight">#ffa040</color>
+    <color name="colorAccent">#ff6f00</color>
 
     <color name="app_background">#f5f5f5</color>
 </resources>
