--- a/app/src/main/res/layout/actionbar_main.xml
+++ b/app/src/main/res/layout/actionbar_main.xml
@@ -5,25 +5,38 @@
     android:gravity="center_vertical"
     android:layout_height="48dip">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/actionbar_fragment1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="36dip"
-            android:layout_height="36dip"
-            android:scaleType="centerInside"
-            android:src="@mipmap/ic_account_circle_white_36dp"/>
+        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.SearchView
-            android:id="@+id/main_searchview"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:iconifiedByDefault="false"
-            android:queryHint="定位到你想要的位置"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="36dip"
+                android:layout_height="36dip"
+                android:scaleType="centerInside"
+                android:src="@mipmap/ic_account_circle_white_36dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dip"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:text="这是昵称"/>
+        </LinearLayout>
+
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_view"
+            style="@style/MaterialSearchViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+
     <RelativeLayout
         android:id="@+id/actionbar_fragment3"
         android:layout_width="match_parent"
