--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.amap.api.maps2d.MapView
+    <com.amap.api.maps.MapView
         android:id="@+id/main_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
