--- a/app/src/main/res/layout/fragment_main_two.xml
+++ b/app/src/main/res/layout/fragment_main_two.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/app_background"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_fragment2_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,4 +9,6 @@
         android:id="@+id/dynamic_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
+
