--- a/app/src/main/res/layout/fragment_rank_one.xml
+++ b/app/src/main/res/layout/fragment_rank_one.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rank_fragment1_refresh"
     android:layout_width="match_parent"
-    android:background="@color/app_background"
     android:layout_height="match_parent">
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rank1_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
