修改了个人排行榜显示

--- a/app/src/main/res/layout/fragment_rank_four.xml
+++ b/app/src/main/res/layout/fragment_rank_four.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rank_fragment4_refresh"
+    android:background="@color/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
