--- a/app/src/main/res/layout/actionbar_main.xml
+++ b/app/src/main/res/layout/actionbar_main.xml
@@ -83,12 +83,32 @@
         android:visibility="gone"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/personal_share_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:background="@null"
+            android:paddingRight="20dip"
+            app:srcCompat="@drawable/ic_main_tab1_24dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="16sp"
+            android:textSize="17sp"
+            android:textStyle="bold"
             android:textColor="@android:color/white"
             android:text="个人中心"/>
+
+        <ImageButton
+            android:id="@+id/personal_setting_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:paddingLeft="20dip"
+            app:srcCompat="@drawable/ic_main_tab3_24dp"/>
     </RelativeLayout>
 </RelativeLayout>
