--- a/app/src/main/res/layout/container_personal_fragment.xml
+++ b/app/src/main/res/layout/container_personal_fragment.xml
@@ -3,12 +3,374 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dip"
-        android:text="哈哈哈哈哈哈哈哈或哈哈哈哈或哈哈哈哈或或或或或或或或或或或或或或或或或或或或或或或或或或或或或或啊哈哈奥奥奥奥奥奥奥奥奥奥奥奥奥奥奥奥奥哈哈啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊" />
+        android:orientation="vertical">
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+        <TextView
+            android:id="@+id/personal_notify_msg"
+            android:layout_width="match_parent"
+            android:layout_height="25dip"
+            android:textSize="14dip"
+            android:background="@color/colorSecondaryLight"
+            android:textColor="@android:color/white"
+            android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingLeft="5dip"
+            android:ellipsize="end"
+            android:paddingRight="5dip"
+            android:text="刚刚xxxx对你的作品xxxx点了赞"/>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="关注我的"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1px"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="我的关注"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1px"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="我的收藏"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="我的作品"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1px"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="我的图集"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1px"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="我的地图"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="消息中心"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="联系我们"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1px"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dip"
+                android:paddingLeft="10dip"
+                android:paddingRight="10dip"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="建议与反馈"
+                    android:drawablePadding="10dip"
+                    android:drawableLeft="@drawable/ic_main_tab2_24dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@android:color/secondary_text_light"/>
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_main_tab3_24dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
