--- a/app/src/main/res/layout/item_author_list.xml
+++ b/app/src/main/res/layout/item_author_list.xml
@@ -28,7 +28,7 @@
             android:textSize="16sp"
             android:layout_below="@id/item_author_wallpaper"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dip"
+            android:layout_marginTop="55dip"
             android:textColor="@android:color/secondary_text_light"
             android:text="用户昵称"/>
 
@@ -38,27 +38,27 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_below="@id/item_author_name"
-            android:layout_marginTop="5dip"
+            android:layout_marginTop="8dip"
             android:layout_centerHorizontal="true"
             android:textColor="@android:color/secondary_text_light"
             android:text="这里是用户的一些介绍信息"/>
 
         <Button
             android:id="@+id/item_attention_button"
-            android:layout_width="80dip"
-            android:layout_height="20dip"
-            android:text="关注"
+            android:layout_width="120dip"
+            android:layout_height="30dip"
+            android:text="+关注"
             android:textColor="@android:color/white"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dip"
-            android:background="@color/colorSecondary"
+            android:layout_marginTop="8dip"
+            android:background="@drawable/secondary_light_2dp_round_bg"
             android:layout_below="@id/item_author_descript"/>
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/item_author_head"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
-            android:layout_marginTop="175dip"
+            android:layout_width="80dip"
+            android:layout_height="80dip"
+            android:layout_marginTop="160dip"
             android:layout_centerHorizontal="true"
             app:placeholderImage="@drawable/default_placeholder"
             app:actualImageScaleType="centerCrop" />
