修改了一些菜单和细节

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -33,4 +33,28 @@
         android:orderInCategory="100"
         app:showAsAction="never"
         android:title="@string/main_menu_text6"/>
+    <item android:id="@+id/main_menu7"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text7"/>
+    <item android:id="@+id/main_menu8"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text8"/>
+    <item android:id="@+id/main_menu9"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text9"/>
+    <item android:id="@+id/main_menu10"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text10"/>
+    <item android:id="@+id/main_menu11"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text11"/>
+    <item android:id="@+id/main_menu12"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text12"/>
 </menu>
