--- a/app/src/main/res/menu/main_menu2.xml
+++ b/app/src/main/res/menu/main_menu2.xml
@@ -21,4 +21,12 @@
         app:showAsAction="never"
         android:orderInCategory="100"
         android:title="@string/main_menu_text23"/>
+    <item android:id="@+id/main_menu24"
+        app:showAsAction="never"
+        android:orderInCategory="100"
+        android:title="@string/main_menu_text24"/>
+    <item android:id="@+id/main_menu25"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="@string/main_menu_text25"/>
 </menu>
