--- a/app/src/main/res/layout/activity_photodetail.xml
+++ b/app/src/main/res/layout/activity_photodetail.xml
@@ -38,6 +38,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            app:fab_color="@android:color/white"/>
+            app:fab_color="@color/colorSecondary"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
