--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -3,25 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background"
+    android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dip"
         android:orientation="vertical">
-
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/cardview_dark_background"
+            app:cardCornerRadius="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@android:color/white"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="作品名称"
-                android:layout_marginTop="24dip"
                 android:textSize="18sp"
                 android:textColor="@android:color/primary_text_light"/>
 
@@ -45,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginBottom="15dip"
                 android:orientation="horizontal">
                 <Button
                     android:layout_width="120dip"
@@ -63,7 +69,15 @@
                     android:background="@drawable/secondary_light_2dp_round_bg"/>
             </LinearLayout>
         </LinearLayout>
+        </android.support.v7.widget.CardView>
 
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/photo_detail_commentlist"
+            android:background="@android:color/white"
+            android:layout_marginTop="5dip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
